# libcmis

./: .gitignore  .travis.yml  .ycm_extra_conf.py  AUTHORS  Makefile.am  NEWS  README  README.md  autogen.sh  cmis-test.sh  configure.ac  coverage.mk  cppcheck-suppress  cppcheck-test.sh.in  lgtm.yml  libcmis-c.pc.in  libcmis.pc.in  run-test.sh  run-test.sh.in
.github/workflows/: c-cpp.yml  ci.yml
doc/: Makefile.am  cmis-client.xml  cmis-client.xml.in
inc/: Makefile.am
inc/libcmis/: Makefile.am  allowable-actions.hxx  document.hxx  exception.hxx  folder.hxx  libcmis-api.h  libcmis.hxx  oauth2-data.hxx  object-type.hxx  object.hxx  property-type.hxx  property.hxx  rendition.hxx  repository.hxx  session-factory.hxx  session.hxx  xml-utils.hxx  xmlserializable.hxx
inc/libcmis-c/: Makefile.am  allowable-actions.h  document.h  error.h  folder.h  libcmis-c-api.h  libcmis-c.h  oauth2-data.h  object-type.h  object.h  property-type.h  property.h  rendition.h  repository.h  session-factory.h  session.h  types.h  vectors.h
m4/: ax_cxx_compile_stdcxx.m4  boost.m4
qa/: Makefile.am
qa/libcmis/: Makefile.am  test-atom.cxx  test-commons.cxx  test-decoder.cxx  test-factory.cxx  test-gdrive.cxx  test-helpers.cxx  test-helpers.hxx  test-jsonutils.cxx  test-mock-atom.cxx  test-mockup  test-mockup-helpers.cxx  test-mockup-helpers.hxx  test-mockup.cxx  test-onedrive.cxx  test-sharepoint.cxx  test-soap.cxx  test-ws-mockup.cxx  test-ws.cxx  test-xmlutils.cxx
qa/libcmis-c/: Makefile.am  test-allowable-actions.cxx  test-build.c  test-document.cxx  test-dummies.cxx  test-dummies.hxx  test-folder.cxx  test-object-type.cxx  test-object.cxx  test-property-type.cxx  test-property.cxx  test-repository.cxx  test-session.cxx
qa/libcmis-mockup/: Makefile.am  curl-mockup.cxx  internals.hxx  mockup-config.h
qa/libcmis-mockup/curl/: curl.h
qa/libcmis/data/: atom-allowable-actions.xml  atom-create-folder-bad-type.xml  atom-create-folder.xml  atom-root-children.xml  atom-root-folder.xml  atom-test-document-updated.xml  atom-test-document.xml  atom-type-docLevel1.xml  atom-type-docLevel2.xml  atom-type-document.xml  atom-type-folder.xml  atom-valid-object-noactions.xml  atom-valid-object.xml  atom-workspaces.xml  json-response.json
qa/libcmis/data/atom/: create-document.xml  get-versions.xml  root-folder.xml  test-document-parents.xml  test-document-relationships.xml  test-document.xml  type-folder.xml  typechildren-docLevel1.xml  typechildren-document.xml  valid-object.xml  working-copy.xml  workspaces.xml
qa/libcmis/data/gdrive/: allVersions.json  approve.html  authcode.html  challenge.html  document-updated.json  document.json  document2.json  document_parents.json  folder.json  folder2.json  folder_children.json  gdoc-file.json  jsontest-good.json  login.html  login1.html  login2.html  mock-file.json  refresh_response.json  root_child_missing.json  root_child_search.json
qa/libcmis/data/onedrive/: file.json  folder-listed.json  folder.json  folderA.json  folderB.json  folderC.json  new-file.json  parent-folder.json  refresh-response.json  search-result.json  searched-file.json  searched-wrong-file.json  token-response.json  updated-file.json
qa/libcmis/data/sharepoint/: auth-resp.json  auth-xml-resp.xml  author.json  children-files.json  children-folders.json  file-v1.json  file.json  folder-properties.json  folder.json  new-xdigest.json  root-folder.json  versions.json  xdigest.json
qa/libcmis/data/ws/: CMISWS-Service.wsdl  cancel-checkout.http  checked-in.http  checkin.http  checkout.http  create-document.http  create-folder-bad-type.http  create-folder.http  created-document.http  created-folder.http  delete-object.http  delete-tree.http  get-content-stream.http  get-renditions.http  get-versions.http  getbypath-bad.http  move-object.http  repositories.http  repository-infos-bad.http  repository-infos.http  root-children.http  root-folder.http  secondary-type.http  set-content-stream.http  test-document-add-secondary.http  test-document-parents.http  test-document-updated.http  test-document.http  type-bad.http  type-docLevel1.http  type-docLevel2-secondary.http  type-docLevel2.http  type-document.http  type-folder.http  typechildren-document.http  update-properties.http  valid-object.http  working-copy.http
qa/mockup/: Makefile.am  curl-mockup.cxx  internals.hxx  mockup-config.cxx  mockup-config.h
qa/mockup/curl/: curl.h
samples/: populate.sh
src/: Makefile.am  cmis-client.cxx  test-atom.cxx
src/libcmis/: Makefile.am  alfresco-session.cxx  alfresco-session.hxx  allowable-actions.cxx  allowable-actions.hxx  atom-allowable-actions.cxx  atom-allowable-actions.hxx  atom-content.cxx  atom-content.hxx  atom-document.cxx  atom-document.hxx  atom-folder.cxx  atom-folder.hxx  atom-object-type.cxx  atom-object-type.hxx  atom-object.cxx  atom-object.hxx  atom-resource.cxx  atom-resource.hxx  atom-session.cxx  atom-session.hxx  atom-utils.cxx  atom-utils.hxx  atom-workspace.cxx  atom-workspace.hxx  base-session.cxx  base-session.hxx  cmis-object.hxx  content.hxx  document.cxx  document.hxx  exception.hxx  folder.cxx  folder.hxx  gdrive-allowable-actions.hxx  gdrive-common.hxx  gdrive-document.cxx  gdrive-document.hxx  gdrive-folder.cxx  gdrive-folder.hxx  (+109 more)
src/libcmis-c/: Makefile.am  allowable-actions.cxx  allowable-actions.h  document.cxx  document.h  error.cxx  error.h  folder.cxx  folder.h  internals.hxx  oauth2-data.cxx  oauth2-data.h  object-type.cxx  object-type.h  object.cxx  object.h  property-type.cxx  property-type.h  property.cxx  property.h  rendition.cxx  rendition.h  repository.cxx  repository.h  session-factory.cxx  session-factory.h  session.cxx  session.h  test-allowable-actions.cxx  test-api.cxx  test-build.c  test-document.cxx  test-dummies.cxx  test-dummies.hxx  test-folder.cxx  test-object-type.cxx  test-object.cxx  test-property-type.cxx  test-property.cxx  test-repository.cxx  (+3 more)
