libcmis_cdir = $(includedir)/libcmis-@LIBCMIS_API_VERSION@/libcmis-c

dist_libcmis_c_HEADERS = \
	allowable-actions.h \
	document.h \
	error.h \
	folder.h \
	object.h \
	object-type.h \
	property.h \
	property-type.h \
	oauth2-data.h \
	rendition.h \
	repository.h \
	types.h \
	session.h \
	session-factory.h \
	vectors.h \
	libcmis-c.h
