libcmis_cdir = $(includedir)/libcmis-@LIBCMIS_API_VERSION@/libcmis-c

dist_libcmis_c_HEADERS = \
	allowable-actions.h \
	document.h \
	error.h \
	folder.h \
	libcmis-c.h \
	oauth2-data.h \
	object-type.h \
	object.h \
	property-type.h \
	property.h \
	rendition.h \
	repository.h \
	session-factory.h \
	session.h \
	types.h \
	vectors.h
