libcmisdir = $(includedir)/libcmis-@LIBCMIS_API_VERSION@/libcmis

dist_libcmis_HEADERS = \
	allowable-actions.hxx \
	document.hxx \
	exception.hxx \
	folder.hxx \
	libcmis-api.h \
	libcmis.hxx \
	oauth2-data.hxx \
	object-type.hxx \
	object.hxx \
	property-type.hxx \
	property.hxx \
	rendition.hxx \
	repository.hxx \
	session-factory.hxx \
	session.hxx \
	xml-utils.hxx \
	xmlserializable.hxx
